--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@ theme: jekyll-theme-architect
 <body>
 <h1> Mitchell Chandler </h1>
 
+<p><a href="https://mlchandler.github.io/publications">Publications</a></p>
+
 <p>
 Website for Mitchell Chandler is a work in progress. Please check back at a later date.
 </p>
