--- a/publications.html
+++ b/publications.html
@@ -5,6 +5,8 @@
 <h1> Mitchell Chandler </h1>
 <h2> Publications </h2>
 
+<p><a href="https://mlchandler.github.io">Home</a></p>
+
 <p>
 Website for Mitchell Chandler is a work in progress. Please check back at a later date.
 </p>
