--- a/index.html
+++ b/index.html
@@ -1,22 +1,9 @@
 ---
-theme: jekyll-theme-architect
+layout: default
+title: Hank Quinlan, Horrible Cop
 ---
 
-<!DOCTYPE html>
-<html>
-
-<body>
-<h1> Mitchell Chandler </h1>
-
-<p><a href="https://mlchandler.github.io/publications">Publications</a></p>
-
-<p>
-Website for Mitchell Chandler is a work in progress. Please check back at a later date.
-</p>
-
-<p><a href="https://scripps.ucsd.edu/profiles/mlchandl">Link to SIO directory personal page</a></p>
-
-</body>
-
-
-</html>
+		<div class="blurb">
+			<h1>Hi there, I'm Hank Quinlan!</h1>
+			<p>I'm best known as the horrible cop from <em>A Touch of Evil</em>. Don't trust me. <a href="/about">Read more about my life...</a></p>
+		</div> 
