--- a/index.html
+++ b/index.html
@@ -1,9 +1,18 @@
 ---
 layout: default
-title: Hank Quinlan, Horrible Cop
+title: Mitchell Chandler
 ---
 
-		<div class="blurb">
-			<h1>Hi there, I'm Hank Quinlan!</h1>
-			<p>I'm best known as the horrible cop from <em>A Touch of Evil</em>. Don't trust me. <a href="/about">Read more about my life...</a></p>
-		</div> 
+<div class="blurb">
+
+<h1>Mitchell Chandler</h1>
+			
+<p> 
+Mitchell's webpage is a work in progress. Please check back at a later date
+</p>
+			
+<p> 
+<a href="https://scripps.ucsd.edu/profiles/mlchandl">Link to my SIO directory page</a>
+</p>
+
+</div> 
