--- a/cv/index.html
+++ b/cv/index.html
@@ -1,22 +1,12 @@
 ---
 layout: default
-title: CV of Your Name
+title: CV - Mitchell Chandler
 ---
 
-	<div class="cv">
-		<a href="#" class="download" title="Download CV as PDF">Download CV</a>			
-					<h1>Hank Quinlan</h1>
-					<address>
-					<strong>Affiliation</strong><br>
-					Street Address<br>
-					City State 12345<br>
-					<abbr title="phone">P:</abbr> (123) 456-7890<br>
-					<span class="obfuscate">youremailaddress@email.com</span>
-					</address>
+<div class="cv">
 
-					<h2>Select Publications</h2>
+<p> 
+Mitchell's webpage is a work in progress. Please check back at a later date
+</p>
 
-					<p><strong>Last Name, F.</strong> (204). Title of a Chapter You Wrote for a Book. In I.M Editor (Ed.), <em>The Book I Contributed To</em> (pp. 97-108). City, ST: Publisher Name. Chapter available at: <a href="#">http://permalink</a>.
-
-
-	</div>
+</div>
