--- a/education/index.html
+++ b/education/index.html
@@ -1,18 +1,16 @@
 ---
 layout: default
-title: Publications - Mitchell Chandler
+title: Education - Mitchell Chandler
 ---
 
 <div class="about">
 
 <h1>Education</h1>
 
-<p>
-Graduate Student, Scripps Institution of Oceanography, 2019-current
-
-BSc(Hons), University of Auckland, 2018
-
-BSc, University of Otago, 2015-2017
-</p>
+<ul>
+  <li>Graduate Student, Scripps Institution of Oceanography, 2019-current</li>
+  <li>BSc(Hons), University of Auckland, 2018</li>
+  <li>BSc, University of Otago, 2015-2017</li>
+</ul>
 
 </div>
