--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: Mitchell Chandler
 <h1>Mitchell Chandler</h1>
 			
 <p> 
-Mitchell's webpage is a work in progress. Please check back at a later date
+This webpage is a work in progress. Links to publications, education, and email contact are all working. More information will be added over time
 </p>
 
 </div> 
