--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@ title: Mitchell Chandler
 <div class="blurb">
 
 <h1>Mitchell Chandler</h1>
-			
+		
+<img src="index_image.jpg">
+		
 <p> 
 This webpage is a work in progress. Links to publications, education, and email contact are all working. More information will be added over time
 </p>
