--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: Mitchell Chandler
 
 <h1>Mitchell Chandler</h1>
 		
-<img src="index_image.jpg" style="float:right">
+<img src="index_image.jpg" style="float:right;width:100px">
 		
 <p> 
 This webpage is a work in progress. Links to publications, education, and email contact are all working. More information will be added over time
