--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@ title: Mitchell Chandler
 <div class="blurb">
 
 <h1>Mitchell Chandler</h1>
-		
-<img src="index_image.jpg" style="float:right;width:100px">
-		
+	
 <p> 
-This webpage is a work in progress. Links to publications, education, and email contact are all working. More information will be added over time
+<img src="index_image.jpg" style="float:left;width:1000px">
+I am currently a first year physical oceanography grad student at Scripps Institution of Oceanography/University of California San Diego. 
+</p>
+
+<p>
+The webpage is currently a work in progress and more information will be added over time
 </p>
 
 </div> 
