image fine tuning

--- a/research/index.html
+++ b/research/index.html
@@ -8,7 +8,7 @@ title: Research - Mitchell Chandler
 <h1>Research</h1>
 
 <p>
-Page is currently a work in progress. Will be updated once I have defined my PhD topic.
+Page is currently a work in progress.
 </p>
 
 </div>
