--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@ title: Mitchell Chandler
 The webpage is currently a work in progress and more information will be added over time
 </p>
 
+<img src="index_image.jpg" style="width:300px">
+
 <p> 
-<img src="index_image.jpg" style="float:left;width:300px">
 I am currently a first year physical oceanography grad student at Scripps Institution of Oceanography/University of California San Diego. 
 </p>
 
