--- a/index.html
+++ b/index.html
@@ -7,16 +7,14 @@ title: Mitchell Chandler
 
 <h1>Mitchell Chandler</h1>
 
-<p>
-The webpage is currently a work in progress and more information will be added over time
-</p>
-
 <img src="index_image.jpg" style="width:300px">
 
 <p> 
 I am currently a first year physical oceanography grad student at Scripps Institution of Oceanography/University of California San Diego. 
 </p>
 
-
+<p>
+<i>The webpage is currently a work in progress and more information will be added over time</i>
+</p>
 
 </div> 
