--- a/research/index.html
+++ b/research/index.html
@@ -5,7 +5,7 @@ title: Research - Mitchell Chandler
 
 <div class="about">
 
-<h1>Research</h1>
+<h1>Research Interests</h1>
 
 <p>
 Page is currently a work in progress.
