--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@ title: Mitchell Chandler
 <img src="index_image.jpg" style="width:300px">
 
 <p> 
-I am currently a first year physical oceanography grad student at Scripps Institution of Oceanography/University of California San Diego. 
+I am currently a first year physical oceanography grad student at <a href="https://scripps.ucsd.edu/">Scripps Institution of Oceanography</a>/<a href="https://ucsd.edu/">University of California San Diego</a>. 
+</p>
+
+<p>
+Originally from New Zealand, I completed my BSc at the <a href="https://www.otago.ac.nz/">University of Otago</a>, and did a further Honours year at the <a href="https://www.auckland.ac.nz/en.html">University of Auckland</a> under <a href="https://unidirectory.auckland.ac.nz/profile/m-bowen">Melissa Bowen (Auckland)</a> and <a href="https://www.otago.ac.nz/marinescience/staff/otago664247.html">Robert Smith (Otago)</a>. 
 </p>
 
 <p>
