--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@ I am currently a first year physical oceanography grad student at <a href="https
 </p>
 
 <p>
-Originally from New Zealand, I completed my BSc at the <a href="https://www.otago.ac.nz/">University of Otago</a>, and did a further Honours year at the <a href="https://www.auckland.ac.nz/en.html">University of Auckland</a> under <a href="https://unidirectory.auckland.ac.nz/profile/m-bowen">Melissa Bowen (Auckland)</a> and <a href="https://www.otago.ac.nz/marinescience/staff/otago664247.html">Robert Smith (Otago)</a>. 
+Originally from New Zealand, I completed my BSc at the University of Otago, and did a further Honours year at the University of Auckland under <a href="https://unidirectory.auckland.ac.nz/profile/m-bowen">Melissa Bowen (Auckland)</a> and <a href="https://www.otago.ac.nz/marinescience/staff/otago664247.html">Robert Smith (Otago)</a>. 
 </p>
 
 <p>
-<i>The webpage is currently a work in progress and more information will be added over time</i>
+<i><b>The webpage is currently a work in progress and more information will be added over time</b></i>
 </p>
 
 </div> 
