--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@ title: Mitchell Chandler
 
 <h1>Mitchell Chandler</h1>
 
-<img src="index_image.jpg" style="width:300px">
+<img src="index_image.jpg" style="width:400px">
 
 <p> 
 I am currently a first year physical oceanography grad student at <a href="https://scripps.ucsd.edu/">Scripps Institution of Oceanography</a>/<a href="https://ucsd.edu/">University of California San Diego</a>. 
 </p>
 
 <p>
-Originally from New Zealand, I completed my BSc at the University of Otago, and did a further Honours year at the University of Auckland under <a href="https://unidirectory.auckland.ac.nz/profile/m-bowen">Melissa Bowen (Auckland)</a> and <a href="https://www.otago.ac.nz/marinescience/staff/otago664247.html">Robert Smith (Otago)</a>. 
+Originally from New Zealand, I completed my BSc at the University of Otago in 2017, and did a further Honours year at the University of Auckland in 2018 under <a href="https://unidirectory.auckland.ac.nz/profile/m-bowen">Melissa Bowen (Auckland)</a> and <a href="https://www.otago.ac.nz/marinescience/staff/otago664247.html">Robert Smith (Otago)</a>. 
 </p>
 
 <p>
