Working on Research page

--- a/research/index.html
+++ b/research/index.html
@@ -5,10 +5,25 @@ title: Research - Mitchell Chandler
 
 <div class="about">
 
-<h1>Research Interests</h1>
+<h1>Research</h1>
+
+<h3>...</h3>
+
+<p>Examining the Argo and HR-XBT observing systems and how these two observing systems can be combined to better estimate geostrophic transport in WBCs.
+
+A poster on this work will be presented at <a href="https://agu.confex.com/agu/osm20/meetingapp.cgi/Paper/653466">Ocean Sciences 2020</a> in San Diego.
+
+This project is building on work by <a href="https://journals.ametsoc.org/doi/full/10.1175/JTECH-D-17-0153.1">Zilberman et al. 2018</a>, and is advised by <a href="https://jsprintall.scrippsprofiles.ucsd.edu/">Janet Sprintall</a> and <a href="https://nzilberman.scrippsprofiles.ucsd.edu/">Nathalie Zilberman</a>.
+</p>
+
+<h3>Fiordland Current</h3>
+<p>
+Information to be added. See my paper published on this work under the <a href="https://mlchandler.github.io/publications/">Publications</a> tab.
+</p>
+
 
 <p>
-Page is currently a work in progress.
+<i><b>Page is currently a work in progress.</b></i>
 </p>
 
 </div>
