--- a/research/index.html
+++ b/research/index.html
@@ -7,9 +7,13 @@ title: Research - Mitchell Chandler
 
 <h1>Research</h1>
 
-<h4>Argo and HR-XBT Observing Networks</h4>
+<h5>Argo and HR-XBT Observing Networks</h5>
 <p>
-<i>Information to be added.</i> This project is building on work by <a href="https://journals.ametsoc.org/doi/full/10.1175/JTECH-D-17-0153.1">Zilberman et al. 2018</a>, and is advised by <a href="https://jsprintall.scrippsprofiles.ucsd.edu/">Janet Sprintall</a> and <a href="https://nzilberman.scrippsprofiles.ucsd.edu/">Nathalie Zilberman</a>.
+<i>Information to be added.</i>
+</p> 
+
+<p>
+This project is building on work by <a href="https://journals.ametsoc.org/doi/full/10.1175/JTECH-D-17-0153.1">Zilberman et al. 2018</a>, and is advised by <a href="https://jsprintall.scrippsprofiles.ucsd.edu/">Janet Sprintall</a> and <a href="https://nzilberman.scrippsprofiles.ucsd.edu/">Nathalie Zilberman</a>.
 </p>
 
 <p>
@@ -17,9 +21,13 @@ A poster on this work will be presented at <a href="https://agu.confex.com/agu/o
 </p>
 
 
-<h4>Fiordland Current</h4>
+<h5>Fiordland Current</h5>
 <p>
-<i>Information to be added.</i> See my paper published on this work under the <a href="https://mlchandler.github.io/publications/">Publications</a> tab.
+<i>Information to be added.</i> 
+</p>
+
+<p>
+See my paper published on this work under the <a href="https://mlchandler.github.io/publications/">Publications</a> tab.
 </p>
 
 <p>
