Updating FC research

--- a/research/index.html
+++ b/research/index.html
@@ -26,13 +26,11 @@ A poster on this work will be presented at <a href="https://agu.confex.com/agu/o
 
 <h4>Fiordland Current</h4>
 <p>
-<i>Information to be added.</i> 
+The Fiordland Current is a poleward-flowing EBC along the Fiordland coast of Southwest New Zealand. Satellite altimetry was used to estimate the mean, interannual variability, decadal variability, and longer-term trends in the across-track surface geostrophic velocity of the current. Possible drivers of these trends and variability were identified. A paper has been <a href="https://mlchandler.github.io/publications/">published</a> on this work.
 </p>
 
 <p>
-See my paper published on this work under the <a href="https://mlchandler.github.io/publications/">Publications</a> tab.
+This work was supervised by <a href="https://unidirectory.auckland.ac.nz/profile/m-bowen">Melissa Bowen</a> and <a href="https://www.otago.ac.nz/marinescience/staff/otago664247.html">Robert Smith</a>. 
 </p>
-
-
 
 </div>
