--- a/research/index.html
+++ b/research/index.html
@@ -26,7 +26,7 @@ A poster on this work will be presented at <a href="https://agu.confex.com/agu/o
 
 <h4>Fiordland Current</h4>
 <p>
-The Fiordland Current is a poleward-flowing EBC along the Fiordland coast of Southwest New Zealand. Satellite altimetry was used to estimate the mean, interannual variability, decadal variability, and longer-term trends in the across-track surface geostrophic velocity of the current. Possible drivers of these trends and variability were identified. A paper has been <a href="https://mlchandler.github.io/publications/">published</a> on this work.
+The Fiordland Current is a poleward-flowing EBC along the Fiordland coast of southwest New Zealand. Satellite altimetry was used to estimate the mean, interannual variability, decadal variability, and longer-term trends in the across-track surface geostrophic velocity of the current. Possible drivers of trends and variability were identified. A paper has been <a href="https://mlchandler.github.io/publications/">published</a> on this work.
 </p>
 
 <p>
