trying to put poster on webpage

--- a/research/index.html
+++ b/research/index.html
@@ -23,6 +23,7 @@ This project is building on work by <a href="https://journals.ametsoc.org/doi/fu
 A poster on this work will be presented at <a href="https://agu.confex.com/agu/osm20/meetingapp.cgi/Paper/653466">Ocean Sciences 2020</a> in San Diego.
 </p>
 
+<img src="Chandler_OSM_poster_draft_final.pdf" style="width:400px">
 
 <h4>Fiordland Current</h4>
 <p>
