--- a/research/index.html
+++ b/research/index.html
@@ -20,12 +20,9 @@ This project is building on work by <a href="https://journals.ametsoc.org/doi/fu
 </p>
 
 <p>
-A poster on this work will be presented at <a href="https://agu.confex.com/agu/osm20/meetingapp.cgi/Paper/653466">Ocean Sciences 2020</a> in San Diego.
+A poster on this work was presented at <a href="https://agu.confex.com/agu/osm20/meetingapp.cgi/Paper/653466">Ocean Sciences 2020</a> in San Diego. A pdf of the poster can be viewed <a href="Chandler_OSM_poster_draft_final.pdf">here</a>.  
 </p>
 
-<img src="Chandler_OSM_poster.png" style="width:400px">
-
-<a href="Chandler_OSM_poster_draft_final.pdf" download>A pdf of the poster can be downloaded here</a>
 
 <h4>Fiordland Current</h4>
 <p>
