--- a/research/index.html
+++ b/research/index.html
@@ -16,7 +16,7 @@ This project is building on work by <a href="https://journals.ametsoc.org/doi/fu
 </p>
 
 <p>
-A poster on this work was presented at <a href="https://agu.confex.com/agu/osm20/meetingapp.cgi/Paper/653466">Ocean Sciences 2020</a> in San Diego. A pdf of the poster can be viewed <a href="Chandler_OSM_poster_draft_final.pdf">here</a>.  
+A poster on this work was presented at <a href="https://agu.confex.com/agu/osm20/meetingapp.cgi/Paper/653466">Ocean Sciences 2020</a> in San Diego, and a pdf of the poster can be viewed <a href="Chandler_OSM_poster_draft_final.pdf">here</a>.  
 </p>
 
 
