--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ I am currently a first year physical oceanography grad student at <a href="https
 </p>
 
 <p>
-Originally from New Zealand, I completed my BSc at the University of Otago in 2017, and did a further Honours year at the University of Auckland in 2018, completing my BSc(Hons) under <a href="https://unidirectory.auckland.ac.nz/profile/m-bowen">Melissa Bowen (Auckland)</a> and <a href="https://www.otago.ac.nz/marinescience/staff/otago664247.html">Robert Smith (Otago)</a>. A paper has been <a href="https://mlchandler.github.io/publications/">published</a> on this work.
+Originally from New Zealand, I completed my BSc at the University of Otago in 2017, and did a further Honours year at the University of Auckland in 2018 where I completed my BSc(Hons) under <a href="https://unidirectory.auckland.ac.nz/profile/m-bowen">Melissa Bowen (Auckland)</a> and <a href="https://www.otago.ac.nz/marinescience/staff/otago664247.html">Robert Smith (Otago)</a>. A paper has been <a href="https://mlchandler.github.io/publications/">published</a> on this work.
 </p>
 
 <p>
