--- a/research/index.html
+++ b/research/index.html
@@ -6,27 +6,27 @@ title: Research - Mitchell Chandler
 <div class="about">
 
 <h1>Research</h1>
-<p>
-<i><b>Page is currently a work in progress.</b></i>
-</p>
-
 <h4>Argo and HR-XBT Observing Networks</h4>
 <p>
-This project is building on work by <a href="https://journals.ametsoc.org/doi/full/10.1175/JTECH-D-17-0153.1">Zilberman et al. 2018</a>, and is advised by <a href="https://jsprintall.scrippsprofiles.ucsd.edu/">Janet Sprintall</a> and <a href="https://nzilberman.scrippsprofiles.ucsd.edu/">Nathalie Zilberman</a>.
+This project aims to combine complementary Argo and HR-XBT datasets to improve long-term estimates of mass and heat transport in both the ocean's interior and boundary currents and is based on the work by <a href="https://journals.ametsoc.org/doi/full/10.1175/JTECH-D-17-0153.1">Zilberman et al. 2018</a>.
 </p>
 
 <p>
-A poster on this work was presented at <a href="https://agu.confex.com/agu/osm20/meetingapp.cgi/Paper/653466">Ocean Sciences 2020</a> in San Diego, and a pdf of the poster can be viewed <a href="Chandler_OSM_poster_draft_final.pdf">here</a>.  
+A poster on this work was presented at <a href="https://agu.confex.com/agu/osm20/meetingapp.cgi/Paper/653466">Ocean Sciences Meeting 2020</a> in San Diego, and a pdf of the poster can be viewed <a href="Chandler_OSM_poster_draft_final.pdf">here</a>.  
+</p>
+
+<p>
+This work is ongoing and is advised by <a href="https://jsprintall.scrippsprofiles.ucsd.edu/">Janet Sprintall</a> and <a href="https://nzilberman.scrippsprofiles.ucsd.edu/">Nathalie Zilberman</a>.
 </p>
 
 
 <h4>Fiordland Current</h4>
 <p>
-The Fiordland Current is a poleward-flowing EBC along the Fiordland coast of southwest New Zealand. Satellite altimetry was used to estimate the mean, interannual variability, decadal variability, and longer-term trends in the across-track surface geostrophic velocity of the current. Possible drivers of trends and variability were identified. A paper has been <a href="https://mlchandler.github.io/publications/">published</a> on this work.
+The Fiordland Current is a poleward-flowing EBC along the southwest coast of New Zealand. Satellite altimetry was used to estimate the mean, interannual variability, decadal variability, and longer-term trends in the across-track surface geostrophic velocity of the current. Possible drivers of trends and variability were identified. A <a href="https://www.tandfonline.com/doi/10.1080/00288330.2019.1629467">paper</a> has been published on this work.
 </p>
 
 <p>
-This work was supervised by <a href="https://unidirectory.auckland.ac.nz/profile/m-bowen">Melissa Bowen</a> and <a href="https://www.otago.ac.nz/marinescience/staff/otago664247.html">Robert Smith</a>. 
+This work was advised by <a href="https://unidirectory.auckland.ac.nz/profile/m-bowen">Melissa Bowen</a> and <a href="https://www.otago.ac.nz/marinescience/staff/otago664247.html">Robert Smith</a>. 
 </p>
 
 </div>
