--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ title: Mitchell Chandler
 <img src="index_image.jpg" style="width:400px">
 
 <p> 
-I am currently a first year physical oceanography grad student at <a href="https://scripps.ucsd.edu/">Scripps Institution of Oceanography</a>/<a href="https://ucsd.edu/">University of California San Diego</a>. 
+I am currently a first year physical oceanography grad student at <a href="https://scripps.ucsd.edu/">Scripps Institution of Oceanography</a>/<a href="https://ucsd.edu/">University of California San Diego</a> and the recepient of a Fulbright student fellowship. 
 </p>
 
 <p>
