--- a/research/index.html
+++ b/research/index.html
@@ -12,7 +12,7 @@ This project aims to combine complementary Argo and HR-XBT datasets to improve l
 </p>
 
 <p>
-A poster on this work was presented at <a href="https://agu.confex.com/agu/osm20/meetingapp.cgi/Paper/653466">Ocean Sciences Meeting 2020</a> in San Diego, and a pdf of the poster can be viewed <a href="Chandler_OSM_poster_draft_final.pdf">here</a>.  
+A poster on this work was presented at <a href="https://agu.confex.com/agu/osm20/meetingapp.cgi/Paper/653466">Ocean Sciences Meeting 2020</a> in San Diego, and a pdf of the poster can be viewed <a href="../publications/Chandler_OSM_poster_draft_final.pdf">here</a>.  
 </p>
 
 <p>
