--- a/coding/index.html
+++ b/coding/index.html
@@ -9,16 +9,11 @@ title: Code - Mitchell Chandler
 <p>
 Some snippets of short and simple miscellaneous MATLAB functions that may be useful to others. 
 </p>
-
-<p>
-Find all mode values in an array.
-</p>
 <ul>
-  <li>[inset function]</li>
+  <li>Find all mode values in an array: [inset function]</li>
 </ul>
-
-<p>
-Calculate spectral slope of spectra...
-</p>
+<ul>
+  <li>Calculate spectral slope of spectra: [inset function]</li>
+</ul>
 
 </div>
