--- a/coding/index.html
+++ b/coding/index.html
@@ -13,7 +13,7 @@ Some snippets of short and simple miscellaneous MATLAB functions that may be use
   <li>Find all mode values in an array: <a href="multi_modes.m">multi_modes.m</a></li>
 </ul>
 <ul>
-  <li>Calculate spectral slope of spectra: [inset function]</li>
+  <li>Calculate spectral slope of a spectra: <a href="spectral_slope.m">spectral_slope.m</a>
 </ul>
 
 </div>
