--- a/coding/index.html
+++ b/coding/index.html
@@ -10,7 +10,7 @@ title: Code - Mitchell Chandler
 Some snippets of short and simple miscellaneous MATLAB functions that may be useful to others. 
 </p>
 <ul>
-  <li>Find all mode values in an array: <a href="multi_modes.m">multi_modes.m</a></li>
+  <li>Find all mode values in an array: <a href="multi_modes.html">multi_modes.m</a></li>
 </ul>
 
 <ul>
