--- a/coding/multi_modes.html
+++ b/coding/multi_modes.html
@@ -79,7 +79,8 @@ U = unique(A); <span class="comment">%find all unique entries in A</span>
 H=histc(A,U); <span class="comment">%frequency count of each unique entry in A</span>
 mm = U(H==max(H)); <span class="comment">%find the unique entries with the highest frequency (modes)</span>
 <span class="keyword">end</span>
-<a href="multi_modes.m">download</a>
+
+<a href="multi_modes.m">DOWNLOAD MATLAB FUNCTION</a>
 </pre><p class="footer"><br><a href="https://www.mathworks.com/products/matlab/">Published with MATLAB&reg; R2019a</a><br></p></div>
 <!--
 ##### SOURCE BEGIN #####
