--- a/coding/multi_modes.html
+++ b/coding/multi_modes.html
@@ -17,9 +17,8 @@ h1 { padding:0px; margin:0px 0px 25px; font-family:Arial, Helvetica, sans-serif;
 h2 { padding:0px; margin:0px 0px 8px; font-family:Arial, Helvetica, sans-serif; font-size:1.2em; color:#000; font-weight:bold; line-height:140%; border-bottom:1px solid #d6d4d4; display:block; }
 h3 { padding:0px; margin:0px 0px 5px; font-family:Arial, Helvetica, sans-serif; font-size:1.1em; color:#000; font-weight:bold; line-height:140%; }
 
-a { color:#005fce; text-decoration:none; }
-a:hover { color:#005fce; text-decoration:underline; }
-a:visited { color:#004aa0; text-decoration:none; }
+a { text-decoration: none; color: #999; }
+a:hover { text-decoration: underline; }
 
 p { padding:0px; margin:0px 0px 20px; }
 img { padding:0px; margin:0px 0px 20px; border:none; }
@@ -80,7 +79,7 @@ H=histc(A,U); <span class="comment">%frequency count of each unique entry in A</
 mm = U(H==max(H)); <span class="comment">%find the unique entries with the highest frequency (modes)</span>
 <span class="keyword">end</span>
 
-<p><a href="multi_modes.m">DOWNLOAD MATLAB FUNCTION</a></p>
+<a href="multi_modes.m">DOWNLOAD MATLAB FUNCTION</a>
 
 </pre><p class="footer"><br><a href="https://www.mathworks.com/products/matlab/">Published with MATLAB&reg; R2019a</a><br></p></div>
 <!--
