--- a/coding/index.html
+++ b/coding/index.html
@@ -14,7 +14,7 @@ Some snippets of short and simple miscellaneous MATLAB functions that may be use
 </ul>
 
 <ul>
-  <li>Calculate spectral slope of a spectra: <a href="spectral_slope.m">spectral_slope.m</a>
+  <li>Calculate spectral slope of a spectra: <a href="spectral_slope.html">spectral_slope.m</a>
 </ul>
 
 </div>
