--- a/coding/multi_modes.html
+++ b/coding/multi_modes.html
@@ -80,7 +80,7 @@ mm = U(H==max(H)); <span class="comment">%find the unique entries with the highe
 <span class="keyword">end</span>
 
 <a href="multi_modes.m">DOWNLOAD MATLAB FUNCTION</a>
-</pre><p class="footer"><br><a href="https://www.mathworks.com/products/matlab/">Published with MATLAB&reg; R2019a</a><br></p></div>
+</div>
 <!--
 ##### SOURCE BEGIN #####
 %Calculates all the modes of a given matrix A
