--- a/coding/index.html
+++ b/coding/index.html
@@ -7,7 +7,7 @@ title: Code - Mitchell Chandler
 
 <h1>Code</h1>
 <p>
-Some snippets of short and simple miscellaneous MATLAB functions that may be useful to others. 
+Some snippets of short, simple MATLAB functions. 
 </p>
 <ul>
   <li>Find all mode values in an array: <a href="multi_modes.html">multi_modes.m</a></li>
