--- a/index.html
+++ b/index.html
@@ -10,18 +10,14 @@ title: Mitchell Chandler
 <img src="index_image.jpg" style="width:400px">
 
 <p> 
-I am a second-year physical oceanography grad student at Scripps Institution of Oceanography/University of California San Diego advised by <a href="https://nzilberman.scrippsprofiles.ucsd.edu/">Nathalie Zilberman</a> and <a href="https://jsprintall.scrippsprofiles.ucsd.edu/">Janet Sprintall</a>, and the recipient of a Fulbright student fellowship. 
+I am a second-year physical oceanography grad student at Scripps Institution of Oceanography-UCSD, and the recipient of a Fulbright student fellowship.
 </p>
 <p>
-My thesis work combines observations from a number of observing systems (Argo, HR-XBT, Satellite altimetry) to estimate transport and variability in western boundary currents (WBCs). These estimates are planned to be used to assess the ability of numerical models and data assimilation systems to resolve WBCs, and to establish a relationship between WBC variablty and the likelihood of marine heatwave (MHW) events.
-</p>
-
-<p>
-Originally from New Zealand, I completed my BSc at the University of Otago in 2017, and did a further Honours year at the University of Auckland in 2018 where I completed my BSc(Hons) under <a href="https://unidirectory.auckland.ac.nz/profile/m-bowen">Melissa Bowen (Auckland)</a> and <a href="https://www.otago.ac.nz/marinescience/staff/otago664247.html">Robert Smith (Otago)</a>. A paper has been published on this work (see <a href="https://mlchandler.github.io/publications/">publications</a>).
+My thesis work is advised by <a href="https://nzilberman.scrippsprofiles.ucsd.edu/">Nathalie Zilberman</a> and <a href="https://jsprintall.scrippsprofiles.ucsd.edu/">Janet Sprintall</a> and combines observations from a number of observing systems (Argo, HR-XBT, Satellite altimetry) to estimate transport and variability in western boundary currents (WBCs). Using these estimates we also plan to assess the ability of models and data assimilation systems to resolve WBCs, and to establish a relationship between WBC variablty and the likelihood of marine heatwave (MHW) events.
 </p>
 
 <p>
-<i><b>The webpage is currently a work in progress and more information will be added over time</b></i>
+Originally from New Zealand, I completed my BSc at the University of Otago in 2017 and did a further Honours year at the University of Auckland in 2018. My <a href="https://mlchandler.github.io/research/">BSc(Hons)</a> examined trends and variability in the Fiordland Current and was advised by <a href="https://unidirectory.auckland.ac.nz/profile/m-bowen">Melissa Bowen</a> and <a href="https://www.otago.ac.nz/marinescience/staff/otago664247.html">Robert Smith</a>.
 </p>
 
 </div> 
