--- a/research/index.html
+++ b/research/index.html
@@ -8,11 +8,11 @@ title: Research - Mitchell Chandler
 <h1>Research</h1>
 <h4>Argo and HR-XBT Observing Networks</h4>
 <p>
-This project aims to combine complementary Argo and HR-XBT datasets to improve long-term estimates of mass and heat transport in both the ocean's interior and boundary currents and is based on the work by <a href="https://journals.ametsoc.org/doi/full/10.1175/JTECH-D-17-0153.1">Zilberman et al. 2018</a>.
+This project builds on work by <a href="https://journals.ametsoc.org/doi/full/10.1175/JTECH-D-17-0153.1">Zilberman et al. 2018</a> and aims to combine complementary Argo and HR-XBT datasets to improve long-term estimates of mass and heat transport in boundary current regions and in the ocean's interior.
 </p>
 
 <p>
-A poster on this work was presented at <a href="https://agu.confex.com/agu/osm20/meetingapp.cgi/Paper/653466">Ocean Sciences Meeting 2020</a> in San Diego, and a pdf of the poster can be viewed <a href="../publications/Chandler_OSM_poster_draft_final.pdf">here</a>.  
+A poster on this work was presented at <a href="https://agu.confex.com/agu/osm20/meetingapp.cgi/Paper/653466">Ocean Sciences Meeting 2020</a> (view <a href="../publications/Chandler_OSM_poster_draft_final.pdf">pdf</a>).  
 </p>
 
 <p>
@@ -20,13 +20,20 @@ This work is ongoing and is advised by <a href="https://jsprintall.scrippsprofil
 </p>
 
 
+
+
 <h4>Fiordland Current</h4>
 <p>
-The Fiordland Current is a poleward-flowing EBC along the southwest coast of New Zealand. Satellite altimetry was used to estimate the mean, interannual variability, decadal variability, and longer-term trends in the across-track surface geostrophic velocity of the current. Possible drivers of trends and variability were identified. A <a href="https://www.tandfonline.com/doi/10.1080/00288330.2019.1629467">paper</a> has been published on this work.
+The Fiordland Current is a poleward-flowing eastern boundary current (EBC) along the southwest coast of New Zealand. Satellite altimetry was used to estimate the mean, interannual variability, decadal variability, and longer-term trends in the across-track surface geostrophic velocity of the current. Variability and trends in the current were related to possible drivers.
 </p>
 
 <p>
-This work was advised by <a href="https://unidirectory.auckland.ac.nz/profile/m-bowen">Melissa Bowen</a> and <a href="https://www.otago.ac.nz/marinescience/staff/otago664247.html">Robert Smith</a>. 
+A <a href="https://www.tandfonline.com/doi/10.1080/00288330.2019.1629467">paper</a> has been published on this work.
 </p>
+
+<p>
+This study was the result of my BSc(Hons) which was advised by <a href="https://unidirectory.auckland.ac.nz/profile/m-bowen">Melissa Bowen</a> and <a href="https://www.otago.ac.nz/marinescience/staff/otago664247.html">Robert Smith</a>. 
+</p>
+
 
 </div>
