--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ title: Mitchell Chandler
 I am a second-year physical oceanography graduate student at Scripps Institution of Oceanography/UCSD, and the recipient of a Fulbright student fellowship.
 </p>
 <p>
-My thesis work is advised by <a href="https://nzilberman.scrippsprofiles.ucsd.edu/">Nathalie Zilberman</a> and <a href="https://jsprintall.scrippsprofiles.ucsd.edu/">Janet Sprintall</a> and combines observations from a number of observing systems (Argo, HR-XBT, Satellite altimetry) to estimate transport and variability in western boundary currents (WBCs). Using these estimates we also plan to assess the ability of models and data assimilation systems to resolve WBCs, and to establish a relationship between WBC variablty and the likelihood of marine heatwave (MHW) events.
+My thesis work is advised by <a href="https://nzilberman.scrippsprofiles.ucsd.edu/">Nathalie Zilberman</a> and <a href="https://jsprintall.scrippsprofiles.ucsd.edu/">Janet Sprintall</a> and combines observations from a number of observing systems (Argo, HR-XBT, Satellite altimetry) to estimate transport and variability in western boundary currents (WBCs).
 </p>
 
 <p>
