--- a/research/index.html
+++ b/research/index.html
@@ -12,15 +12,14 @@ This project builds on work by <a href="https://journals.ametsoc.org/doi/full/10
 </p>
 
 <p>
-A poster on this work was presented at <a href="https://agu.confex.com/agu/osm20/meetingapp.cgi/Paper/653466">Ocean Sciences Meeting 2020</a> (view <a href="../publications/Chandler_OSM_poster_draft_final.pdf">pdf</a>).  
+A poster on this work was presented at <a href="https://agu.confex.com/agu/osm20/meetingapp.cgi/Paper/653466">Ocean Sciences Meeting 2020</a> (<a href="../publications/Chandler_OSM_poster_draft_final.pdf">pdf</a>).  
 </p>
 
 <p>
 This work is ongoing and is advised by <a href="https://jsprintall.scrippsprofiles.ucsd.edu/">Janet Sprintall</a> and <a href="https://nzilberman.scrippsprofiles.ucsd.edu/">Nathalie Zilberman</a>.
 </p>
 
-
-
+<img src="hrglobal-hist-sio.gif" style="width:400px">
 
 <h4>Fiordland Current</h4>
 <p>
@@ -34,6 +33,7 @@ A <a href="https://www.tandfonline.com/doi/10.1080/00288330.2019.1629467">paper<
 <p>
 This study was the result of my BSc(Hons) which was advised by <a href="https://unidirectory.auckland.ac.nz/profile/m-bowen">Melissa Bowen</a> and <a href="https://www.otago.ac.nz/marinescience/staff/otago664247.html">Robert Smith</a>. 
 </p>
+
 
 
 </div>
