--- a/research/index.html
+++ b/research/index.html
@@ -19,7 +19,7 @@ A poster on this work was presented at <a href="https://agu.confex.com/agu/osm20
 This work is ongoing and is advised by <a href="https://jsprintall.scrippsprofiles.ucsd.edu/">Janet Sprintall</a> and <a href="https://nzilberman.scrippsprofiles.ucsd.edu/">Nathalie Zilberman</a>.
 </p>
 
-<img src="hrglobal-hist-sio.gif" style="width:400px">
+<img src="hrglobal-hist-sio.gif" style="width:400px" align="left" />
 
 <h4>Fiordland Current</h4>
 <p>
