--- a/research/index.html
+++ b/research/index.html
@@ -7,6 +7,9 @@ title: Research - Mitchell Chandler
 
 <h1>Research</h1>
 <h4>Argo and HR-XBT Observing Networks</h4>
+
+<img src="hrglobal-hist-sio.gif" style="width:400px" align="left" />
+
 <p>
 This project builds on work by <a href="https://journals.ametsoc.org/doi/full/10.1175/JTECH-D-17-0153.1">Zilberman et al. 2018</a> and aims to combine complementary Argo and HR-XBT datasets to improve long-term estimates of mass and heat transport in boundary current regions and in the ocean's interior.
 </p>
@@ -19,9 +22,12 @@ A poster on this work was presented at <a href="https://agu.confex.com/agu/osm20
 This work is ongoing and is advised by <a href="https://jsprintall.scrippsprofiles.ucsd.edu/">Janet Sprintall</a> and <a href="https://nzilberman.scrippsprofiles.ucsd.edu/">Nathalie Zilberman</a>.
 </p>
 
-<img src="hrglobal-hist-sio.gif" style="width:400px" align="left" />
+
 
 <h4>Fiordland Current</h4>
+
+<img src="south_current.jpg" style="width:400px" align="left" />
+
 <p>
 The Fiordland Current is a poleward-flowing eastern boundary current (EBC) along the southwest coast of New Zealand. Satellite altimetry was used to estimate the mean, interannual variability, decadal variability, and longer-term trends in the across-track surface geostrophic velocity of the current. Variability and trends in the current were related to possible drivers.
 </p>
@@ -34,6 +40,6 @@ A <a href="https://www.tandfonline.com/doi/10.1080/00288330.2019.1629467">paper<
 This study was the result of my BSc(Hons) which was advised by <a href="https://unidirectory.auckland.ac.nz/profile/m-bowen">Melissa Bowen</a> and <a href="https://www.otago.ac.nz/marinescience/staff/otago664247.html">Robert Smith</a>. 
 </p>
 
-<img src="south_current.jpg" style="width:400px">
+
 
 </div>
