--- a/research/index.html
+++ b/research/index.html
@@ -8,7 +8,7 @@ title: Research - Mitchell Chandler
 <h1>Research</h1>
 <h4>Argo and HR-XBT Observing Networks</h4>
 
-<img src="hrglobal-hist-sio.gif" style="width:30%" align="left" >
+<img src="hrglobal-hist-sio.gif" width="30%" align="left" >
 
 <p>
 This project builds on work by <a href="https://journals.ametsoc.org/doi/full/10.1175/JTECH-D-17-0153.1">Zilberman et al. 2018</a> and aims to combine complementary Argo and HR-XBT datasets to improve long-term estimates of mass and heat transport in boundary current regions and in the ocean's interior.
@@ -26,7 +26,7 @@ This work is ongoing and is advised by <a href="https://jsprintall.scrippsprofil
 
 <h4>Fiordland Current</h4>
 
-<img src="south_current.jpg" style="width:30%" align="right" >
+<img src="south_current.jpg" width="30%" align="right" >
 
 <p>
 The Fiordland Current is a poleward-flowing eastern boundary current (EBC) along the southwest coast of New Zealand. Satellite altimetry was used to estimate the mean, interannual variability, decadal variability, and longer-term trends in the across-track surface geostrophic velocity of the current. Variability and trends in the current were related to possible drivers.
