--- a/research/index.html
+++ b/research/index.html
@@ -26,7 +26,7 @@ This work is ongoing and is advised by <a href="https://jsprintall.scrippsprofil
 
 <h4>Fiordland Current</h4>
 
-<img src="south_current.jpg" width="30%" align="right" >
+<img src="south_current.jpg" width="30%" align="center" >
 
 <p>
 The Fiordland Current is a poleward-flowing eastern boundary current (EBC) along the southwest coast of New Zealand. Satellite altimetry was used to estimate the mean, interannual variability, decadal variability, and longer-term trends in the across-track surface geostrophic velocity of the current. Variability and trends in the current were related to possible drivers.
