--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: Mitchell Chandler
 
 <h1>Mitchell Chandler</h1>
 
-<img src="index_image.jpg" style="width:400px">
+<img src="index_image.jpg" style="width:400px" class="center"/>
 
 <p> 
 I am a second-year physical oceanography graduate student at Scripps Institution of Oceanography/UCSD, and the recipient of a Fulbright student fellowship.
