--- a/research/index.html
+++ b/research/index.html
@@ -35,6 +35,6 @@ A <a href="https://www.tandfonline.com/doi/10.1080/00288330.2019.1629467">paper<
 This study was the result of my BSc(Hons) which was advised by <a href="https://unidirectory.auckland.ac.nz/profile/m-bowen">Melissa Bowen</a> and <a href="https://www.otago.ac.nz/marinescience/staff/otago664247.html">Robert Smith</a>. 
 </p>
 
-<img src="south_current.jpg" width="30%" align="middle" >
+<img src="south_current.jpg" width="30%" class="center"/>
 
 </div>
