--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@ My thesis work is advised by <a href="https://nzilberman.scrippsprofiles.ucsd.ed
 Originally from New Zealand, I completed my BSc at the University of Otago in 2017 and did a further Honours year at the University of Auckland in 2018. My <a href="https://mlchandler.github.io/research/">BSc(Hons)</a> examined trends and variability in the Fiordland Current and was advised by <a href="https://unidirectory.auckland.ac.nz/profile/m-bowen">Melissa Bowen</a> and <a href="https://www.otago.ac.nz/marinescience/staff/otago664247.html">Robert Smith</a>.
 </p>
 
-<img src="index_image.jpg" style="width:400px" class="center"/>
+<img src="index_image.jpg" width="100%" class="center"/>
 
 </div> 
