--- a/coding/index.html
+++ b/coding/index.html
@@ -11,7 +11,7 @@ Some snippets of short, simple MATLAB functions.
 </p>
 <ul>
   <li>Find all mode values in an array: <a href="multi_modes.html">multi_modes.m</a></li>
-  <li>Calculate spectral slope of a spectra: <a href="spectral_slope.html">spectral_slope.m</a>
+  <li>Calculate spectral slope of a spectra: <a href="spectral_slope.html">spectral_slope.m</a></li>
 </ul>
 
 </div>
