--- a/coding/index.html
+++ b/coding/index.html
@@ -10,8 +10,9 @@ title: Code - Mitchell Chandler
 Some snippets of short, simple MATLAB functions. 
 </p>
 <ul>
-  <li>Find all mode values in an array: <a href="multi_modes.html">multi_modes.m</a></li>
-  <li>Calculate spectral slope of a spectra: <a href="spectral_slope.html">spectral_slope.m</a></li>
+	<li>Plot error as a shaded region around a line (instead of error bars): <a href="shaded_error.html">shaded_error.m</a></li>
+	<li>Find all mode values in an array: <a href="multi_modes.html">multi_modes.m</a></li>
+	<li>Calculate spectral slope of a spectra: <a href="spectral_slope.html">spectral_slope.m</a></li>
 </ul>
 
 </div>
