--- a/publications/index.html
+++ b/publications/index.html
@@ -10,6 +10,17 @@ title: Publications - Mitchell Chandler
 Chandler M, Bowen M, Smith RO. (2019). The Fiordland Current, southwest New Zealand: mean, variability, and trends. <i>New Zealand Journal of Marine and Freshwater Research.</i> <a href="https://tandfonline.com/doi/10.1080/00288330.2019.1629467">DOI: 10.1080/00288330.2019.1629467</a>
 </p>
 
+<h2>Talks</h2>
+<p> 
+Chandler M, Bowen M, Smith RO. (2020). The Fiordland Current: mean, variability, trends. <i>New Zealand Physical Oceanography Workshop</i> (virtual)
+</p>
+<p> 
+Chandler M, Zilberman N, Sprintall J. (2020). Progress towards a combined XBT and Argo observing network for estimating upper-ocean transport. <i>NOAA Invited Seminar</i> (virtual)
+</p>
+<p> 
+Chandler M. (2020). Measuring the subtropical western boundary currents of the Indo-Pacific. <i>Graduate Climate Conference 2020</i> (virtual)
+</p>
+
 <h2>Posters</h2>
 <p> 
 Chandler M, Sprintall J, Zilberman N. Towards a basin-scale observing network for monitoring upper-ocean mass and temperature variability. <i>Ocean Sciences Meeting 2020.</i> <a href="Chandler_OSM_poster_draft_final.pdf">pdf</a>
