--- a/publications/index.html
+++ b/publications/index.html
@@ -12,13 +12,13 @@ Chandler M, Bowen M, Smith RO. (2019). The Fiordland Current, southwest New Zeal
 
 <h2>Talks</h2>
 <p> 
-Chandler M, Bowen M, Smith RO. (2020). The Fiordland Current: mean, variability, trends. <i>New Zealand Physical Oceanography Workshop</i> (virtual)
+Chandler M, Bowen M, Smith RO. (2020). The Fiordland Current: mean, variability, trends. <i>New Zealand Physical Oceanography Workshop</i> (virtual).
 </p>
 <p> 
-Chandler M, Zilberman N, Sprintall J. (2020). Progress towards a combined XBT and Argo observing network for estimating upper-ocean transport. <i>NOAA Invited Seminar</i> (virtual)
+Chandler M, Zilberman N, Sprintall J. (2020). Progress towards a combined XBT and Argo observing network for estimating upper-ocean transport. <i>NOAA Invited Seminar</i> (virtual).
 </p>
 <p> 
-Chandler M. (2020). Measuring the subtropical western boundary currents of the Indo-Pacific. <i>Graduate Climate Conference 2020</i> (virtual)
+Chandler M. (2020). Measuring the subtropical western boundary currents of the Indo-Pacific. <i>Graduate Climate Conference 2020</i> (virtual).
 </p>
 
 <h2>Posters</h2>
