--- a/publications/index.html
+++ b/publications/index.html
@@ -5,7 +5,7 @@ title: Publications - Mitchell Chandler
 
 <div class="about">
 
-<h2>Publications</h2>
+<h2>Publications (<a href="https://scholar.google.com/citations?user=w3B4oXkAAAAJ">Google Scholar</a>)</h2>
 <p>
 Chandler M, Bowen M, Smith RO. (2019). The Fiordland Current, southwest New Zealand: mean, variability, and trends. <i>New Zealand Journal of Marine and Freshwater Research.</i> <a href="https://tandfonline.com/doi/10.1080/00288330.2019.1629467">DOI: 10.1080/00288330.2019.1629467</a>
 </p>
