--- a/publications/index.html
+++ b/publications/index.html
@@ -10,15 +10,20 @@ title: Publications - Mitchell Chandler
 Chandler M, Bowen M, Smith RO. (2019). The Fiordland Current, southwest New Zealand: mean, variability, and trends. <i>New Zealand Journal of Marine and Freshwater Research.</i> <a href="https://tandfonline.com/doi/10.1080/00288330.2019.1629467">DOI: 10.1080/00288330.2019.1629467</a>
 </p>
 
+<h2>Reports</h2>
+<p> 
+Chandler M, Zilberman NV, Sprintall J. (2021). Combining complementary observing systems to produce a basin-scale network for monitoring upper-ocean transport. <i>UC San Diego: Scripps Institution of Oceanography</i>.<a href=" https://escholarship.org/uc/item/7pg5m20c"></a>
+</p>
+
 <h2>Talks</h2>
 <p> 
-Chandler M, Bowen M, Smith RO. (2020). The Fiordland Current: mean, variability, trends. <i>New Zealand Physical Oceanography Workshop</i> (virtual).
+Chandler M, Bowen M, Smith RO. (2020). The Fiordland Current: mean, variability, trends. <i>New Zealand Physical Oceanography Workshop</i> [virtual].
 </p>
 <p> 
-Chandler M, Zilberman N, Sprintall J. (2020). Progress towards a combined XBT and Argo observing network for estimating upper-ocean transport. <i>NOAA Invited Seminar</i> (virtual).
+Chandler M, Zilberman N, Sprintall J. (2020). Progress towards a combined XBT and Argo observing network for estimating upper-ocean transport. <i>NOAA Invited Seminar</i> [virtual].
 </p>
 <p> 
-Chandler M. (2020). Measuring the subtropical western boundary currents of the Indo-Pacific. <i>Graduate Climate Conference 2020</i> (virtual).
+Chandler M. (2020). Measuring the subtropical western boundary currents of the Indo-Pacific. <i>Graduate Climate Conference 2020</i> [virtual].
 </p>
 
 <h2>Posters</h2>
