--- a/publications/index.html
+++ b/publications/index.html
@@ -12,7 +12,7 @@ Chandler M, Bowen M, Smith RO. (2019). The Fiordland Current, southwest New Zeal
 
 <h2>Reports</h2>
 <p> 
-Chandler M, Zilberman NV, Sprintall J. (2021). Combining complementary observing systems to produce a basin-scale network for monitoring upper-ocean transport. <i>UC San Diego: Scripps Institution of Oceanography</i>.<a href=" https://escholarship.org/uc/item/7pg5m20c"></a>
+Chandler M, Zilberman NV, Sprintall J. (2021). Combining complementary observing systems to produce a basin-scale network for monitoring upper-ocean transport. <i>UC San Diego: Scripps Institution of Oceanography</i>.<a href=" https://escholarship.org/uc/item/7pg5m20c">eScholarship</a>
 </p>
 
 <h2>Talks</h2>
