--- a/twitter/index.html
+++ b/twitter/index.html
@@ -8,14 +8,15 @@ title: Twitter Posters - Mitchell Chandler
 
 <h2>Twitter Posters</h2>
 <p>
-Twitter posters were brought to my attention by Mike Morrison and were conceived as an alternative to conferences which were postponed and cancelled as a result of the covid-19 pandemic. These Twitter Posters are intended to be a relatively low effort (after all you have already done the hard work of conducting your research!) way of communicating science to a wider group of people using GIFs to present a series of simple slides on twitter. For more information about Twitter Posters see Mike's youtube video <a href="https://www.youtube.com/watch?v=fQDL8r3r_d4">here</a>, where he also provides templates to create your own!
+Twitter posters were brought to my attention by Mike Morrison and were conceived as an alternative to conferences which were postponed and cancelled as a result of the covid-19 pandemic. These Twitter Posters are intended to be a relatively low effort (after all you have already done the hard work of conducting your research!) way of communicating science to a wider group of people using GIFs to present a series of simple slides on twitter. For more information about Twitter Posters see Mike's youtube video (<a href="https://www.youtube.com/watch?v=fQDL8r3r_d4">LINK</a>), where he also provides templates to create your own!
 </p>
 
 <p>
-I have taken to making Twitter Posters for my peer-reviewed research as a way of quickly and simply communicating the key findings from my work to a broad audience. These Twitter Posters are all available on my <a href="https://twitter.com/nz_mitch_">twitter</a>. With direct links to each Twitter Poster below [or imbed the twitter posters?].
+I have taken to making Twitter Posters for my peer-reviewed research as a way of quickly and simply communicating the key findings from my work to a broad audience. These Twitter Posters are all available on my twitter, and I have included direct links to each Twitter Poster below [or imbed the twitter posters?].
 </p>
 <ul>
   <li><a href="https://twitter.com/nz_mitch_/status/1366896057016217601">Fiordland Current (Chandler et al. 2019)</a></li>
 </ul>
+<IMG SRC="FC_2021.gif">
 
 </div>
