update landing page

--- a/education/index.html
+++ b/education/index.html
@@ -9,7 +9,7 @@ title: Education - Mitchell Chandler
 
 <ul>
   <li>Graduate Student, Scripps Institution of Oceanography, 2019-current</li>
-  <li>BSc(Hons), University of Auckland, 2018</li>
+  <li>BSc(Hons, First Class), University of Auckland, 2018</li>
   <li>BSc, University of Otago, 2015-2017</li>
 </ul>
 
