--- a/index.html
+++ b/index.html
@@ -7,16 +7,19 @@ title: Mitchell Chandler
 
 <h1>Mitchell Chandler</h1>
 <p> 
-I am a second-year physical oceanography graduate student at Scripps Institution of Oceanography/UCSD, and the recipient of a Fulbright student fellowship.
+I am a second-year physical oceanography graduate student at Scripps Institution of Oceanography/UCSD advised by <a href="https://nzilberman.scrippsprofiles.ucsd.edu/">Nathalie Zilberman</a> and <a href="https://jsprintall.scrippsprofiles.ucsd.edu/">Janet Sprintall</a>, and the recipient of a Fulbright student fellowship.
 </p>
 <p>
-My thesis work is advised by <a href="https://nzilberman.scrippsprofiles.ucsd.edu/">Nathalie Zilberman</a> and <a href="https://jsprintall.scrippsprofiles.ucsd.edu/">Janet Sprintall</a> and combines observations from a number of observing systems (Argo, HR-XBT, Satellite altimetry) to estimate transport and variability in western boundary currents (WBCs).
+My thesis work aims to combine observations from multiple observing systems to produce estimates of upper ocean transport over longer time periods and at higher spatial and temporal resolutions than is presently able to be achieved by any one observing system alone. These estimates will be used to examine trends and variability in western boundary currents (WBCs), which are major ocean currents found at the western boundaries of ocean basins. Part of my work also aims to examine relationships between WBC variability and the occurrence of marine heatwaves (periods of anomalously warm water), as these heatwave events can have devastating consequences on weather, fisheries, and marine ecosystems.
 </p>
 
 <p>
-Originally from New Zealand, I completed my BSc at the University of Otago in 2017 and did a further Honours year at the University of Auckland in 2018. My <a href="https://mlchandler.github.io/research/">BSc(Hons)</a> examined trends and variability in the Fiordland Current and was advised by <a href="https://unidirectory.auckland.ac.nz/profile/m-bowen">Melissa Bowen</a> and <a href="https://www.otago.ac.nz/marinescience/staff/otago664247.html">Robert Smith</a>.
+Originally from New Zealand, I completed my BSc at the University of Otago in 2017 and did a further Honours year at the University of Auckland in 2018. My <a href="https://mlchandler.github.io/research/">BSc(Hons)</a> used satellite altimetry to examine trends and variability in the surface expression of the Fiordland Current, which is a poleward-flowing boundary current along the Fiordland coast of south-west New Zealand. My advisors were <a href="https://unidirectory.auckland.ac.nz/profile/m-bowen">Melissa Bowen</a> (Auckland) and <a href="https://www.otago.ac.nz/marinescience/staff/otago664247.html">Robert Smith</a> (Otago).
 </p>
 
-<img src="index_image.jpg" class="center"/>
+<h3>Research Interests</h3>
+<p>
+Boundary currents; Western boundary currents; Observational oceanography; Argo; Southwest Pacific oceanography; Marine heatwaves.
+</p>
 
 </div> 
