--- a/twitter/index.html
+++ b/twitter/index.html
@@ -12,7 +12,7 @@ Twitter posters were brought to my attention by Mike Morrison and were conceived
 </p>
 
 <p>
-I have taken to making Twitter Posters for my peer-reviewed research as a way of quickly and simply communicating the key findings from my work to a broad audience. These Twitter Posters are all available on my twitter, and I have included direct links to each Twitter Poster below [or imbed the twitter posters?].
+I have taken to making Twitter Posters for my peer-reviewed research as a way of quickly and simply communicating the key findings from my work to a broad audience. These Twitter Posters are all available on my twitter, and I have included direct links to each Twitter Poster below.
 </p>
 <ul>
   <li><a href="https://twitter.com/nz_mitch_/status/1366896057016217601">Fiordland Current (Chandler et al. 2019)</a></li>
