--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   <a href="#education" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
     <i class="fa fa-eye w3-xxlarge"></i>
     <p>EDUCATION</p>
+	
+	  <a href="#pubs" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
+    <i class="fa fa-eye w3-xxlarge"></i>
+    <p>PUBLICATIONS</p>
+	
   </a>
 </nav>
 
@@ -95,7 +100,38 @@ Originally from New Zealand, I completed my BSc at the University of Otago in 20
   
   
   
-  
+<!-- Publications -->
+<div class="w3-content w3-justify w3-text-grey w3-padding-64" id="pubs">
+
+<h2>Publications <a href="https://scholar.google.com/citations?user=w3B4oXkAAAAJ">(Google Scholar)</a></h2>
+<p>
+Chandler M, Bowen M, Smith RO. (2019). The Fiordland Current, southwest New Zealand: mean, variability, and trends. <i>New Zealand Journal of Marine and Freshwater Research.</i> <a href="https://tandfonline.com/doi/10.1080/00288330.2019.1629467">DOI: 10.1080/00288330.2019.1629467</a>
+</p>
+
+<h2>Reports</h2>
+<p> 
+Chandler M, Zilberman NV, Sprintall J. (2021). Combining complementary observing systems to produce a basin-scale network for monitoring upper-ocean transport. <i>UC San Diego: Scripps Institution of Oceanography</i>. <a href=" https://escholarship.org/uc/item/7pg5m20c">UC eScholarship</a>
+</p>
+
+<h2>Talks</h2>
+<p> 
+Chandler M, Bowen M, Smith RO. (2020). The Fiordland Current: mean, variability, trends. <i>New Zealand Physical Oceanography Workshop</i> [virtual].
+</p>
+<p> 
+Chandler M, Zilberman N, Sprintall J. (2020). Progress towards a combined XBT and Argo observing network for estimating upper-ocean transport. <i>NOAA Invited Seminar</i> [virtual].
+</p>
+<p> 
+Chandler M. (2020). Measuring the subtropical western boundary currents of the Indo-Pacific. <i>Graduate Climate Conference 2020</i> [virtual].
+</p>
+
+<h2>Posters</h2>
+<p> 
+Chandler M, Sprintall J, Zilberman N. Towards a basin-scale observing network for monitoring upper-ocean mass and temperature variability. <i>Ocean Sciences Meeting 2020.</i> <a href="Chandler_OSM_poster_draft_final.pdf">pdf</a>
+</p>
+
+</div>
+
+
   
     <!-- Footer -->
   <footer class="w3-content w3-padding-64 w3-text-grey w3-xlarge">
