--- a/index.html
+++ b/index.html
@@ -28,20 +28,22 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <p>HOME</p>
   </a>
   <a href="#about" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
-    <i class="fa fa-user w3-xxlarge"></i>
+    <i class="fa fa-user w3-xlarge"></i>
     <p>ABOUT</p>
   </a>
+  
+  
   <a href="#education" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
-    <i class="	fa fa-lightbulb-o"></i>
+    <i class="	fa fa-lightbulb-o w3-xlarge"></i>
     <p>EDUCATION</p>
 	
 	  <a href="#pubs" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
-    <i class="fa fa-book"></i>
+    <i class="fa fa-book w3-xlarge"></i>
     <p>PUBLICATIONS</p>
 	
-		fab fa-twitter
+
 			  <a href="#tp" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
-    <i class="fa fa-twitter"></i>
+    <i class="fa fa-twitter w3-xlarge"></i>
     <p>TWITTER POSTERS</p>
 	
   </a>
@@ -94,8 +96,11 @@ Originally from New Zealand, I completed my BSc at the University of Otago in 20
 
 <!-- Education -->
 <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="education">
-<h2>Education</h2>
 
+
+<h2 class="w3-text-light-grey">Education</h2>
+    <hr style="width:200px" class="w3-opacity">
+	
 <ul>
   <li>Graduate Student, Scripps Institution of Oceanography, 2019-current</li>
   <li>BSc(Hons, First Class), University of Auckland, 2018</li>
