--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ Chandler M. (2020). Measuring the subtropical western boundary currents of the I
 
 <h2>Posters</h2>
 <p> 
-Chandler M, Sprintall J, Zilberman N. Towards a basin-scale observing network for monitoring upper-ocean mass and temperature variability. <i>Ocean Sciences Meeting 2020.</i> <a href="Chandler_OSM_poster_draft_final.pdf">pdf</a>
+Chandler M, Sprintall J, Zilberman N. Towards a basin-scale observing network for monitoring upper-ocean mass and temperature variability. <i>Ocean Sciences Meeting 2020.</i> <a href="posters/Chandler_OSM2020.pdf">pdf</a>
 </p>
 
 </div>
@@ -160,7 +160,7 @@ I have taken to making Twitter Posters for my peer-reviewed research as a way of
 <ul>
   <li><a href="https://twitter.com/nz_mitch_/status/1366896057016217601">Fiordland Current (Chandler et al. 2019)</a></li>
 </ul>
-<IMG SRC="FC_2021.gif">
+<IMG SRC="/tposters/FC_2021.gif">
 
 </div>
 
